tools/tests/errors/surf_num_07.experr
cannot convert Float infinity to Integer
